<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1.0"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.55"
            android:gravity="center"
            android:background="@color/orange"
            android:layout_height="0dp">
            <ImageView
                android:layout_width="match_parent"
                android:src="@mipmap/bulb_icon"
                android:scaleType="fitCenter"
                android:layout_height="200dp" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.45"
            android:gravity="center"
            android:id="@+id/bottom"
            android:orientation="vertical"
            android:layout_height="0dp">


            <TextView
                android:layout_width="wrap_content"
                android:text="@string/trip_management"
                android:textAllCaps="true"
                android:id="@+id/TVtripmgmt"
                android:textColor="@color/orange"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/perplanned"
                android:textAllCaps="false"
                android:id="@+id/perplanned"
                android:paddingTop="7dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/offering"
                android:textAllCaps="false"
                android:paddingTop="15dp"
                android:id="@+id/offering"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/powerful"
                android:textAllCaps="false"
                android:paddingTop="2dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/reporting_functions"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="2dp"
                android:textSize="12dp"
                android:layout_height="wrap_content" />





        </LinearLayout>



    </LinearLayout>

</RelativeLayout>
