<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/RelLayoutFirst"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/orange"
            android:textSize="@dimen/header_text"
            android:id="@+id/TextViewIndicationForForgotUniqueId"
            android:text="@string/forgot_unique_id_without_question_mark"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="left|center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/E_mail"
                android:id="@+id/emailTV"
                android:layout_gravity="left|center"
                android:gravity="left|center"
                android:textSize="13dp"
                android:textColor="@color/orange"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/emailEdLinLayout"
            android:layout_marginTop="3dp"
            android:background="@drawable/registration_edittext_border"
            android:layout_height="40dp">
            <ImageView
                android:layout_width="15dp"
                android:layout_marginTop="6dp"
                android:layout_gravity="center"
                android:id="@+id/emailimageView"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/envolope_orange_icon"
                android:layout_height="15dp" />

            <View
                android:layout_width="1dp"
                android:id="@+id/emailView"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/orange"
                android:layout_height="fill_parent"></View>

            <EditText
                android:layout_width="match_parent"
                android:text=""
                android:singleLine="true"
                android:id="@+id/emailEdittext"
                android:gravity="left|center"
                android:textColor="@color/blue"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_gravity="left|center"
                android:inputType="textEmailAddress"
                android:background="@null"
                android:paddingLeft="3dp"
                android:textSize="@dimen/edit_text_size"
                android:layout_height="wrap_content" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"></LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/orange_filled_layout_border"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:background="@drawable/transparent"
                android:text="@string/submit"
                android:id="@+id/forgotpswrd_submit_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/bottom_button_text_size"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/login"
            android:id="@+id/TextViewLogin"
            android:layout_marginTop="7dp"
            android:textSize="13dp"
            android:textColor="@color/blue"
            android:layout_height="wrap_content" />


    </LinearLayout>




</RelativeLayout>
